--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -17210,7 +17210,7 @@ svg.pulse-svg .third-circle {
 }
 
 .dlabnav .menu-scroll {
-  height: calc(100% - 7.5rem);
+  height: calc(100% - 2.5rem);
 }
 
 .dlabnav .dlabnav-scroll {
@@ -43120,4 +43120,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-weight: 600;
   color: #5b5e81;
   text-transform: capitalize;
+}
+
+.nav-pills .navlink {
+  border-radius: 0.325rem;
+  padding: 1.5rem 7rem;
+  font-size: 15px;
+  font-weight: 600;
+  color: #5b5e81;
+  text-transform: capitalize;
+}
+
+.nav-pills1 .navlink {
+
+  padding: 1.5rem 9rem;
 }
