--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -43135,3 +43135,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   padding: 1.5rem 9rem;
 }
+
+.navpills{ 
+ margin-left: 15rem;
+}
