--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -28395,6 +28395,7 @@ button.btn.btn-primary.btn-outline-primary.dropdown-toggle {
 }
 
 .form-check .form-check-input {
+  width: 40px !important;
   float: left;
   margin-left: -1.5em;
 }
@@ -43136,95 +43137,101 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   padding: 1.5rem 9rem;
 }
 
-.navpills{ 
- margin-left: 15rem;
+.navpills {
+  margin-left: 15rem;
 
 
-/* // for loader */
-.loader-container {
-  height: 100vh;
-  background: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  /* // for loader */
+  .loader-container {
+    height: 100vh;
+    background: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-[data-layout-mode=light] .loader-container {
-  background: #f2f2f2;
-}
+  [data-layout-mode=light] .loader-container {
+    background: #f2f2f2;
+  }
 
-[data-layout-mode=dark] .loader-container {
-  background: #212529;
-}
+  [data-layout-mode=dark] .loader-container {
+    background: #212529;
+  }
 
-.loader-container {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .loader-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.loader {
-  position: relative;
-  width: 75px;
-  height: 100px;
+  .loader {
+    position: relative;
+    width: 75px;
+    height: 100px;
 
-}
+  }
 
-.loader__bar {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 10px;
-  height: 50%;
-  background: #7539ff;
-  transform-origin: center bottom;
-  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-}
+  .loader__bar {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 10px;
+    height: 50%;
+    background: #7539ff;
+    transform-origin: center bottom;
+    box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
+  }
 
-.loader__bar:nth-child(1) {
-  left: 0px;
-  transform: scale(1, 0.2);
-  -webkit-animation: barUp1 4s infinite;
-  animation: barUp1 4s infinite;
-}
+  .loader__bar:nth-child(1) {
+    left: 0px;
+    transform: scale(1, 0.2);
+    -webkit-animation: barUp1 4s infinite;
+    animation: barUp1 4s infinite;
+  }
 
-.loader__bar:nth-child(2) {
-  left: 15px;
-  transform: scale(1, 0.4);
-  -webkit-animation: barUp2 4s infinite;
-  animation: barUp2 4s infinite;
-}
+  .loader__bar:nth-child(2) {
+    left: 15px;
+    transform: scale(1, 0.4);
+    -webkit-animation: barUp2 4s infinite;
+    animation: barUp2 4s infinite;
+  }
 
-.loader__bar:nth-child(3) {
-  left: 30px;
-  transform: scale(1, 0.6);
-  -webkit-animation: barUp3 4s infinite;
-  animation: barUp3 4s infinite;
-}
+  .loader__bar:nth-child(3) {
+    left: 30px;
+    transform: scale(1, 0.6);
+    -webkit-animation: barUp3 4s infinite;
+    animation: barUp3 4s infinite;
+  }
 
-.loader__bar:nth-child(4) {
-  left: 45px;
-  transform: scale(1, 0.8);
-  -webkit-animation: barUp4 4s infinite;
-  animation: barUp4 4s infinite;
-}
+  .loader__bar:nth-child(4) {
+    left: 45px;
+    transform: scale(1, 0.8);
+    -webkit-animation: barUp4 4s infinite;
+    animation: barUp4 4s infinite;
+  }
 
-.loader__bar:nth-child(5) {
-  left: 60px;
-  transform: scale(1, 1);
-  -webkit-animation: barUp5 4s infinite;
-  animation: barUp5 4s infinite;
-}
+  .loader__bar:nth-child(5) {
+    left: 60px;
+    transform: scale(1, 1);
+    -webkit-animation: barUp5 4s infinite;
+    animation: barUp5 4s infinite;
+  }
 
-.loader__ball {
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 10px;
-  height: 10px;
-  background: #7539ff;
-  border-radius: 50%;
-  -webkit-animation: ball 4s infinite;
-  animation: ball 4s infinite;
+  .loader__ball {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    background: #7539ff;
+    border-radius: 50%;
+    -webkit-animation: ball 4s infinite;
+    animation: ball 4s infinite;
+  }
+
+  .toggler {
+    width: 40px !important;
+  }
+
 }
