--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -17302,6 +17302,7 @@ svg.pulse-svg .third-circle {
 
 .dlabnav .metismenu>li>a i {
   color: #000;
+  width: 25px;
 }
 
 .dlabnav .metismenu>li>a svg {
