RemoveFavourite Api added and convert rupee to dollar

--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -39868,9 +39868,8 @@ table.tb-transaction tbody td {
 .eye {
   position: absolute;
   right: 20px;
-  /* bottom: 0.625rem
-   */
-   top:40px;
+  /* bottom: 0.625rem   */
+  top:40px;
 
 }
 
