--- a/Frontend/src/Layouts/Admin/Chatbox/Chatbox.css
+++ b/Frontend/src/Layouts/Admin/Chatbox/Chatbox.css
@@ -36,7 +36,7 @@
   }
   
   .chatbox {
-    width: auto;
+    /* width: auto; */
     overflow: hidden;
     height: 100%;
     border-left: 1px solid #ccc;
@@ -56,7 +56,7 @@
   
   .chat-area .form-control {
     display: block;
-    width: 80%;
+    width: 100%;
     padding: 0.375rem 0.75rem;
     font-size: 14px;
     font-weight: 400;
