--- a/Frontend/src/Layouts/Admin/Chatbox/Chatbox.css
+++ b/Frontend/src/Layouts/Admin/Chatbox/Chatbox.css
@@ -1,28 +1,32 @@
 .message-area {
-    height: 100vh;
-    overflow: hidden;
-    padding: 30px 0;
+    /* height: 100vh;
+    overflow: hidden; */
+
     background: #f5f5f5;
   }
-  
+  .msg-body {
+    padding: 0px 20px;
+    height: 300px;
+    overflow-y: auto;
+}
   .chat-area {
     position: relative;
     width: 100%;
     background-color: #fff;
     border-radius: 0.3rem;
-    height: 90vh;
+    height: 100%;
     overflow: hidden;
-    min-height: calc(100% - 1rem);
+    /* min-height: calc(100% - 1rem); */
   }
   
   .chatlist {
     outline: 0;
     height: 100%;
-    overflow: hidden;
+    overflow-y: auto;
     width: 300px;
     float: left;
-    padding: 15px;
-  }
+    padding: 20px 15px;
+}
   
   .chat-area .modal-content {
     border: none;
