--- a/Frontend/src/Layouts/Admin/Chatbox/Chatbox.css
+++ b/Frontend/src/Layouts/Admin/Chatbox/Chatbox.css
@@ -6,7 +6,7 @@
   }
   .msg-body {
     padding: 0px 20px;
-    height: 300px;
+    height: 350px;
     overflow-y: auto;
 }
   .chat-area {
@@ -27,7 +27,10 @@
     float: left;
     padding: 20px 15px;
 }
-  
+  .chat-list {
+    height: 350px;
+    overflow-y: auto;
+}
   .chat-area .modal-content {
     border: none;
     border-radius: 0;
