feat: Implement trade history filtering by date and user in SuperAdminTradeHistory component
fix: Update ProfitMargin default value to 0 in UpdateAdmin component

fix: Adjust Amount display precision to 4 decimal places in Brokerage component

fix: Prevent empty data fetch in Deposit and Withdrawal components when no admin is selected

refactor: Update routing to include Bonus component and remove Brokerage routes

feat: Add gettradehistory service for fetching trade history data

fix: Enhance Formik input handling for numeric fields with validation

feat: Add Sidebar icons for Bonus and Brokerage sections

refactor: Update Sidebar_path to reflect new Bonus route

chore: Add socket client for real-time data handling

feat: Create Bonus component for managing bonuses and brokerage data

--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -42913,3 +42913,8 @@ ul.nav.nav-pills.mb-4.light {
   justify-content: center;
   border-bottom: 1px solid #ebebf7;
 }
+
+.nav-tabs .nav-link.active {
+  color: #0d6efd !important;
+  font-weight: 800;
+}
