--- a/Frontend/public/assets/css/style.css
+++ b/Frontend/public/assets/css/style.css
@@ -17973,7 +17973,7 @@ svg.pulse-svg .third-circle {
 }
 
 [data-sidebar-style="full"][data-layout="vertical"] .menu-toggle .nav-header .nav-control {
-  right: -15.3rem;
+  right: -5.3rem;
 }
 
 [data-sidebar-style="full"][data-layout="vertical"] .menu-toggle .nav-header .nav-control .hamburger .line {
@@ -42929,3 +42929,16 @@ ul.nav.nav-pills.mb-4.light {
   font-size: 0.95rem;
   padding: 0.55rem 0.75rem;
 }
+.table thead
+{
+  position: sticky;
+  top: 0px;  /* 0px if you don't have a navbar, but something is required */
+  background: white;
+}
+.table-responsive {
+  overflow-x: auto;   /* for horizontal scroll */
+  overflow-y: visible; /* allow sticky to work on Y */
+  max-height: 400px;   /* or any height for vertical scroll */
+}
+
+
